# gpt

./: README.md
gpt/: ChangeLog  HACKING  INSTALL  Makefile.am  NEWS  README  README.en  README.pt_BR  THANKS  configure.ac  configure.in  gpt.kdevelop  gpt.kno
gpt/debian/: changelog  control  copyright  docs  gpt.install  libgportugol-dev.install  rules  watch
gpt/doc/gramatica/: lexer.html  parser.html
gpt/doc/man/: gpt.1  gpt.en.1
gpt/doc/man/pt_BR/: gpt.1
gpt/doc/manual/: gpt.kilepr  manual.tex
gpt/exemplos/: Makefile.am  algoritmo1.pt  highlight.gpt  highlight.pt  olamundo.gpt
gpt/extra/: pseudo.xml  pseudo.xml.custom
gpt/gramaticas/: Makefile.am  interpreter.g  lexer.g  parser.g  pt2c.g  semantic.g
gpt/lib/: Makefile.am  base.gpt
gpt/src/: ErrorHandler.cpp  ErrorHandler.hpp  GPT.cpp  GPT.hpp  Makefile.am  gpt.cpp  main.cpp
gpt/src/compiler/: ErrorHandler.cpp  ErrorHandler.hpp  Makefile.am  PortugolAST.cpp  PortugolAST.hpp  Symbol.cpp  SymbolTable.hpp
gpt/src/compiler/c_translator/: pt2c.g
gpt/src/compiler/interpreter/: InterpreterDBG.hpp  InterpreterEval.cpp  InterpreterHelper.cpp  InterpreterHelper.hpp  interpreter.g
gpt/src/compiler/parser/: BasePortugolParser.cpp  Makefile.am  SemanticEval.cpp  SemanticEval.hpp  lexer.g  parser.g  semantic.g
gpt/src/compiler/x86/: Makefile.am  template.asm  template.s  x86.g
gpt/src/modules/: Display.cpp  Display.hpp  ErrorHandler.hpp  GPTDisplay.cpp  GPTDisplay.hpp  Makefile.am  PortugolAST.cpp  Symbol.hpp
gpt/src/modules/c_translator/: Makefile.am  pt2c.g
gpt/src/modules/interpreter/: InterpreterDBG.cpp  InterpreterDBG.hpp  InterpreterEval.cpp  InterpreterEval.hpp  Makefile.am  interpreter.g
gpt/src/modules/parser/: BasePortugolParser.cpp  BasePortugolParser.hpp  Makefile.am  SemanticEval.cpp  SemanticEval.hpp  lexer.g  parser.g  semantic.g
gpt/src/modules/x86/: Makefile.am  X86.cpp  X86.hpp  asm_elf.h  asm_lib.h  asm_prologue.h  asm_tmpl.h  asm_win32.h  x86.g
gpt/src/parser/: BasePortugolParser.cpp  BasePortugolParser.hpp  InterpreterHelper.cpp  InterpreterHelper.hpp  Makefile.am  PortugolAST.cpp  PortugolAST.hpp  SemanticEval.cpp  SemanticEval.hpp  Symbol.cpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp
gpt/stuff/: highlight.gpt  svn2cl.php
gpt/test/: cli_debugger  cli_debugger.c  feed_test  run_test.sh  tester.gpt
gpt/test/asm/: build  test.asm
gpt/test/asm/win32/: nagoa+.inc  teste.asm
gpt2/common/: Makefile.boot  configure.ac
gpt2/common/src/: CBinString.cpp  CBinString.hpp  CCode.cpp  CCode.hpp  CData.cpp  CData.hpp  CDataStack.hpp  CHeader.cpp  COptions.hpp  CSymbol.cpp  CSymbol.hpp  CSymbolList.cpp  CSymbolList.hpp  CSymbolTable.cpp  CSymbolTable.hpp  CTextFile.cpp  CTextFile.hpp  Common.hpp  Makefile.am  Tools.cpp  Tools.hpp  UnicodeCharScanner.hpp
gpt2/gptasm/: configure.ac
gpt2/gptasm/src/: CCode.cpp  CCode.hpp  CData.cpp  CData.hpp  CGenBytecode.cpp  CGenBytecode.hpp  Makefile  Makefile.am  lexer.g  main.cpp  parser.g
gpt2/gptasm/test/: asm.sh  asm_all.sh  check_all.sh  hello_world.gasm  prep_tests.sh  show_and_asm.sh  test_ok.sh  test_ok_all.sh
gpt2/gptasm/test/gerados_pelo_gptc/: estruturas_condicionais_4.gasm  estruturas_repeticao_1.gasm  estruturas_repeticao_2.gasm  estruturas_repeticao_3.gasm  estruturas_repeticao_4.gasm  expressoes_matematicas_1.gasm  expressoes_matematicas_2.gasm  funcoes_definidas_usuario_2.gasm  inline_codigo_gptassembly.gasm  invocando_subrotinas_linguagem_2.gasm  matrizes_1.gasm  matrizes_4.gasm  procedimentos_definidos_usuario_1.gasm  procedimentos_definidos_usuario_2.gasm  procedimentos_definidos_usuario_3.gasm  procedimentos_definidos_usuario_4.gasm  variaveis_3.gasm  variaveis_6.gasm  variaveis_8.gasm
gpt2/gptasm/test/wikki/: chamada_sistema_1.gasm  (+32 more)
gpt2/gptc/src/: Arguments.cpp  AsmProgram.cpp  AsmProgram.hpp  BaseGptAsmWalker.cpp  BaseGptAsmWalker.hpp  BaseSemanticWalker.cpp  BaseSemanticWalker.hpp  Context.hpp  GptAsmExpression.hpp  Makefile.am  Makefile.in  PortugolAST.cpp  PortugolAST.hpp  Subroutine.cpp  Subroutine.hpp  Symbol.cpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp  SymbolTableExceptions.cpp  SymbolTableExceptions.hpp  TextFile.cpp  Tools.cpp  Tools.hpp  Types.cpp  Types.hpp  gptasm.g  lexer.g  main.cpp  parser.g  semantic.g  teste.cpp
gpt2/gptc/test/: Makefile  Makefile.am  TestAST.cpp  compiler_test.g  first.test  test.example  tester.cpp
gpt2/gptvm/src/: CBytecode.cpp  CBytecode.hpp  CDataStack.cpp  CDataStack.hpp  CExecutionStack.cpp  CExecutionStack.hpp  CGptVm.cpp  CGptVm.hpp  CRunBytecode.cpp  CRunBytecode.hpp  Makefile  Makefile.am  main.cpp
gpt2/src/: GPT.cpp  GPT.hpp  Makefile.am  main.cpp
gpt2/src/gptc/: BaseSemanticWalker.hpp  Makefile  UnicodeCharScanner.hpp  lexer.g  parser.g  semantic.g  teste.cpp
gpt2/src/modules/: Makefile.am  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp
gpt2_old/alex/lib/: Makefile.am
gpt2_old/gptasm/src/: CData.hpp  CGenBytecode.hpp  CGptAsm.cpp  CGptAsm.hpp  Makefile.am  lexer.g  parser.g
gpt2_old/gptc/test/: Makefile.am  TestAST.cpp  compiler_test.g
gpteditor/src/common/: Makefile.am  abstractdebugger.cpp  abstractdebugger.h  connection.cpp  connection.h  debuggerbreakpoint.cpp  debuggerbreakpoint.h  debuggerstack.cpp  debuggerstack.h  variable.cpp  variable.h
gpteditor/src/debuggergpt/: Makefile.am  debuggergpt.cpp  debuggergpt.h  gptnet.cpp  gptnet.h  gptvariable.cpp  gptvariable.h  gptvariableparser.cpp  gptvariableparser.h
gpteditor/src/gpteditor/: Makefile.am  breakpointlistview.cpp  breakpointlistview.h  breakpointlistviewitem.cpp  breakpointlistviewitem.h  debuggercombostack.cpp  debuggercombostack.h  debuggermanager.cpp  debuggermanager.h  document.cpp  document.h  editortabwidget.cpp  editortabwidget.h  gpteditor.cpp  gpteditor.desktop  gpteditorui.rc  mainwindow.cpp  mainwindow.h  messagelistview.cpp  messagelistview.h  variableslistview.cpp  variableslistview.h  variableslistviewitem.cpp  variableslistviewitem.h  watchlistview.cpp  watchlistview.h  x-gptsrc.desktop
gpteditor/src/settings/: Makefile.am  gpteditorsettings.cpp  gpteditorsettings.h
(+336 files in other folders)
