AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gpt, 0.8b)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

dnl
dnl Checks for ANTLR
dnl

AC_ARG_WITH(antlr,
    [  --with-antlr=PATH  caminho da instalacao do ANTLR (ex: /usr/local)],
[
  AC_PATH_PROG(ANTLR, "${antlr}bin/antlr", no, $withval)
  ANTLR_BIN="${ANTLR}"
  ANTLR_LIB=`${ANTLR}-config --libs`
],
[
  AC_PATH_PROG(ANTLR, antlr)
  ANTLR_BIN="antlr"
  ANTLR_LIB=`antlr-config --libs`
])

AC_SUBST(ANTLR_LIB)

AC_SUBST(ANTLR_BIN)

if test "x${ANTLR}" = "x"; then
  AC_MSG_ERROR(
  [
    O programa "antlr" nao foi encontrado no seu sistema (PATH).
    GPT precisa do ANTLR (versao 2.7.5) instalado.
    Baixe em: http://www.antlr.org
  ])
fi

dnl
dnl checks if we want to install the libs and headers
dnl

AC_ARG_ENABLE([install-devel],
    [AC_HELP_STRING([--enable-install-devel],
                    [instala bibliotecas e headers])], 
    [INSTALL_DEVEL="yes"],
    [INSTALL_DEVEL="no"]
)

AM_CONDITIONAL(INSTALL_DEVEL, test x$INSTALL_DEVEL = xyes)


dnl checks for PCRE

# AC_MSG_CHECKING(for pcre)

AC_CHECK_PROG(has_pcre, pcre-config, yes)

if test "x$has_pcre" = "xyes"; then
  PCRE_LIB="-lpcre"
else
  AC_MSG_ERROR(
  [
    GPT precisa da biblioteca PCRE instalada
    Baixe em: http://www.pcre.org/
  ])
fi
AC_SUBST(PCRE_LIB),

dnl
dnl the end
dnl

AC_OUTPUT(Makefile        
        src/Makefile 
        doc/Makefile 
        doc/man/Makefile 
        exemplos/Makefile
        src/compiler/Makefile 
        src/compiler/parser/Makefile 
        src/compiler/interpreter/Makefile 
        src/compiler/c_translator/Makefile
      )
