INCLUDES = -I$(top_srcdir)/.

noinst_LTLIBRARIES = libgptcommon.la

libgptcommon_la_SOURCES = CBinString.cpp  CHeader.cpp  COptions.hpp  CSymbol.hpp \
                          CSymbolList.hpp   CSymbolTable.hpp  Makefile.am  Tools.hpp \
                          CBinString.hpp  CHeader.hpp  CSymbol.cpp   CSymbolList.cpp  \
                          CSymbolTable.cpp  Common.hpp  Tools.cpp \
                          MismatchedUnicodeCharException.hpp \
                          MismatchedUnicodeCharException.cpp \
                          UnicodeCharBuffer.hpp UnicodeCharScanner.hpp
